--- a/styles/includes/_overlap.scss
+++ b/styles/includes/_overlap.scss
@@ -19,37 +19,56 @@
 	}
 
 	&__wrapper {
-		margin-top: 12%;
-		position: relative;
+		@include spacing-700(margin-top);
+		@include spacing-800(margin-bottom);
 	}
 
 	&__item {
+		@include spacing-400(margin-top);
+
 		grid-row: 1;
+		position: relative;
 
-		&:first-child {
-			padding: 0 10%;
-			position: relative;
-			@include bp-xs() {
-				padding: 0;
-			}
-
-			.overlap__circle {
-				left: 26%;
-				position: absolute;
-				top: 15%;
-				width: 15%;
-				z-index: 4;
-
-				// stylelint-disable-next-line max-nesting-depth
-				@include bp-xs() {
-					left: 15%;
-					top: 14%;
-				}
-			}
+		&--img {
+			align-items: center;
+			display: flex;
 		}
 
 		&:nth-child(2) {
 			z-index: 2;
+
+			.overlap__circle-container {
+				position: relative;
+			}
+
+			.overlap__circle {
+				position: absolute;
+				right: -20%;
+				top: -13%;
+				width: 40%;
+				z-index: 4;
+			}
+		}
+	}
+
+	&__line-container {
+		background-color: $color-primary--white;
+		height: 55%;
+		position: absolute;
+		right: -1rem;
+		top: 50%;
+		width: 1.7rem;
+	}
+
+	&__line {
+		background-color: $color-secondary--yellow;
+		height: 10rem;
+		left: 0;
+		position: absolute;
+		top: 100%;
+		width: 0.3rem;
+		@include bp-xs {
+			display: none;
 		}
 	}
 
@@ -63,15 +82,19 @@
 
 	&__img--left {
 		img {
-			padding-top: 50%;
 			z-index: 2;
 		}
 	}
 
 	&__txt {
+		@include spacing-400(margin-left);
+
 		margin: auto;
 		@include bp-xs() {
+			@include spacing-400(margin-top);
+
 			grid-row: 2;
+			margin-left: initial;
 		}
 	}
 }
